--- a/whitepaper.tex
+++ b/whitepaper.tex
@@ -17,7 +17,7 @@
     PADLOCK \\
     \large Protocol Allowing Decentralized Large thrOughput Coins, Kool
 }
-\author{Ellis Frank}
+\author{Ellis Frank \\ ellis@mcfranko.com}
 
 \begin{document}
 
