data availability proofs and various edits

--- a/whitepaper.bib
+++ b/whitepaper.bib
@@ -26,3 +26,10 @@
     url = "https://www.youtube.com/watch?v=j5UvgfWVnYg",
     urldate = "2021-07-20",
 }
+@misc{ShardProbabilityTest,
+    author = "Ellis Frank",
+    year = {2021},
+    title = "Shard Probability test",
+    url = "https://github.com/padlock-xpl/shard-probability-test",
+    urldate = "2021-08-09",
+}
